--- a/UcasProjectManagement/UcasProjectManagement_Report.htm
+++ b/UcasProjectManagement/UcasProjectManagement_Report.htm
@@ -21,7 +21,7 @@
             margin: 0;
             padding: 20px;
             height: 35px;
-            background: url('file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Logo.gif') no-repeat right 30px top 30px;
+            background: url('file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/4jnicwkm.gsx/Resources/T4Templates/UpgradeLog/Logo.gif') no-repeat right 30px top 30px;
             background-color: #0e0e0e;
             color: #909090;
             font: normal 10px Arial, sans-serif;
@@ -78,8 +78,8 @@
                             Telerik UI for WinForms <span>Upgrade Wizard Log</span>
                         </div>    
                         <div id="legend">
-                            <span style="background-color: #0e0e0e; color: #fff;">Processed: 9</span>
-                            <span style="background-color: green; color: #fff;">Succeeded: 9</span>
+                            <span style="background-color: #0e0e0e; color: #fff;">Processed: 6</span>
+                            <span style="background-color: green; color: #fff;">Succeeded: 6</span>
                             <span style="background-color: blue; color: #fff;">Info: 0</span>
                             <span style="background-color: gold; color: #fff;">Warnings: 0</span>
                             <span style="background-color: red; color: #fff;">Failed: 0</span>
@@ -95,66 +95,45 @@
                 </tr>
                 <tr>
                                 <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
+                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/4jnicwkm.gsx/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
                     <td>UcasProWindowsForm</td>
-                    <td>Assembly Reference</td>
-                    <td>Telerik.WinControls, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
+                    <td>Backup</td>
+                    <td>Create backup C:\Users\Heroo\Documents\GitHub\UcasProject\UcasProjectManagement\UcasProWindowsForm_Backup_2014.12.10_02.29.44.</td>
                     <td>Success</td>
                 </tr>  
                                 <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
+                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/4jnicwkm.gsx/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
                     <td>UcasProWindowsForm</td>
                     <td>Assembly Reference</td>
-                    <td>Telerik.WinControls.ChartView, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
+                    <td>Telerik.WinControls, Version=2014.3.1202.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
                     <td>Success</td>
                 </tr>  
                                 <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
+                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/4jnicwkm.gsx/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
                     <td>UcasProWindowsForm</td>
                     <td>Assembly Reference</td>
-                    <td>Telerik.WinControls.GridView, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
+                    <td>Telerik.WinControls.GridView, Version=2014.3.1202.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
                     <td>Success</td>
                 </tr>  
                                 <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
+                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/4jnicwkm.gsx/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
                     <td>UcasProWindowsForm</td>
                     <td>Assembly Reference</td>
-                    <td>Telerik.WinControls.RichTextBox, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
+                    <td>Telerik.WinControls.Themes.TelerikMetro, Version=2014.3.1202.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
                     <td>Success</td>
                 </tr>  
                                 <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
+                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/4jnicwkm.gsx/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
                     <td>UcasProWindowsForm</td>
                     <td>Assembly Reference</td>
-                    <td>Telerik.WinControls.Themes.Office2010Black, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
+                    <td>Telerik.WinControls.UI, Version=2014.3.1202.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
                     <td>Success</td>
                 </tr>  
                                 <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
+                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/4jnicwkm.gsx/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
                     <td>UcasProWindowsForm</td>
                     <td>Assembly Reference</td>
-                    <td>Telerik.WinControls.Themes.Office2013Light, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
-                    <td>Success</td>
-                </tr>  
-                                <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
-                    <td>UcasProWindowsForm</td>
-                    <td>Assembly Reference</td>
-                    <td>Telerik.WinControls.Themes.TelerikMetro, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
-                    <td>Success</td>
-                </tr>  
-                                <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
-                    <td>UcasProWindowsForm</td>
-                    <td>Assembly Reference</td>
-                    <td>Telerik.WinControls.UI, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
-                    <td>Success</td>
-                </tr>  
-                                <tr>
-                    <td><img alt="Success" src="file:///C:/Users/Heroo/AppData/Local/Microsoft/VisualStudio/12.0/Extensions/cqkn1fil.emg/Resources/T4Templates/UpgradeLog/Success.gif" /></td>
-                    <td>UcasProWindowsForm</td>
-                    <td>Assembly Reference</td>
-                    <td>TelerikCommon, Version=2014.3.1021.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
+                    <td>TelerikCommon, Version=2014.3.1202.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL</td>
                     <td>Success</td>
                 </tr>  
                                 </tr>               
